Intermediate Result.